--- a/SpringTest/src/main/webapp/resources/assets/slick/slick-theme.css
+++ b/SpringTest/src/main/webapp/resources/assets/slick/slick-theme.css
@@ -88,11 +88,11 @@
 }
 .slick-prev:before
 {
-    background-image: url( "images/bg-house.png" );
+    content: ">";
 }
 [dir='rtl'] .slick-prev:before
 {
-    background-image: url( "images/bg-house.png" );
+    content: "<";
 }
 
 .slick-next
@@ -106,11 +106,11 @@
 }
 .slick-next:before
 {
-    background-image: url( "images/bg-house.png" );
+    content: "<";
 }
 [dir='rtl'] .slick-next:before
 {
-    background-image: url( "images/bg-house.png" );
+    content: ">";
 }
 
 /* Dots */
